test(signer): migrate int-test to JUnit 5 on api-test-core, drop test-framework-core The largest gRPC int-test module: all 79 scenarios across the 9 Gherkin features become 9 JUnit 5 classes (one per feature), 1:1 with the Step narrative helper. The gRPC transport is unchanged - SignerRpcClient/SignerSignRpcClient are built in the new container setup exactly as the deleted SignerClientHolder did. - The suite is deeply state-coupled: every class mutates the same two   long-lived tokens and later classes assert on earlier classes' side   effects (member cert counts accrue across features), exactly as the   Cucumber file-ordered run did. SignerIntTestSuite therefore forces   serial, class-ordered execution (@DisableParentConfigurationParameters   + ClassOrderer$OrderAnnotation, class @Order matching the feature   prefixes, @TestMethodOrder within classes) - the same idiom as   E2eSuite and the api-test phased suites. - Wired through the intTestPhasedSuite convention (unfiltered runs   select only the suite; --tests bypasses it) instead of a hand-rolled   include filter - the extension also carries the generateIntTestEnv   and checkstyleIntTest dependencies the old task block declared. - RSA/EC feature pairs share scenario bodies via   AbstractSignerSoftware/HardwareKeyOpsIntTest, parametrized by token   and algorithm (~600 lines deduplicated); the EC classes add their   own leading previous-keys-deleted scenario per the original features. - 0300 parallel-actions keeps its real ExecutorService fan-out (same   thread counts and post-restart loop); 0400 secondary-node keeps the   dual-container topology incl. the in-container HSM key-insertion   exec. - 0050's client-timeout scenario now uses an ephemeral   newSignerClientWithTimeout(10) instead of swapping the global   holder's client, removing the implicit run-first dependency while   asserting the same timeout behavior. - The Feign FeignTestCaApi is replaced by a RestAssured multipart POST   to the same /testca/sign en